Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -44,6 +44,11 @@
         <td>Dooley</td>
         <td>july@example.com</td>
       </tr>
+       <tr>
+        <td>Sheraz</td>
+        <td>Ilyas</td>
+        <td>sherazilyas647@gmail.com</td>
+      </tr>
     </tbody>
   </table>
 
