--- a/Responsive design .html
+++ b/Responsive design .html
@@ -30,19 +30,19 @@
     </thead>
     <tbody>
       <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
+        <td>Wasif</td>
+        <td>Imtiaz</td>
+        <td>wasifimtiaz58@gmail.com</td>
       </tr>
       <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
+        <td>Haider</td>
+        <td>Tahir</td>
+        <td>HT@example.com</td>
       </tr>
       <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
+        <td>Abdul</td>
+        <td>Gafoor</td>
+        <td>AG@example.com</td>
       </tr>
     </tbody>
   </table>
