Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -30,9 +30,9 @@
     </thead>
     <tbody>
       <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
+        <td>Ali</td>
+        <td>Hanan</td>
+        <td>alihanan852@gmail.com/td>
       </tr>
       <tr>
         <td>Mary</td>
