Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -44,6 +44,16 @@
         <td>Dooley</td>
         <td>july@example.com</td>
       </tr>
+      <tr>
+        <td>Abdul</td>
+        <td>Ghafoor</td>
+        <td>abulghafoor438@gmail.com</td>
+      </tr>
+      <tr>
+        <td>wasif</td>
+        <td>don</td>
+        <td>wasif@gmail.com</td>
+      </tr>
     </tbody>
   </table>
 
