--- a/Responsive design .html
+++ b/Responsive design .html
@@ -44,6 +44,11 @@
         <td>Dooley</td>
         <td>july@example.com</td>
       </tr>
+      <tr>
+        <td>Nadeem</td>
+        <td>Khan</td>
+        <td>nk27890@gmail</td>
+      </tr>
     </tbody>
   </table>
 
