--- a/Responsive design .html
+++ b/Responsive design .html
@@ -30,19 +30,19 @@
     </thead>
     <tbody>
       <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
+        <td>Haider</td>
+        <td>Tahir</td>
+        <td>haidertahir1@gmail.com</td>
       </tr>
       <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
+        <td>Candy</td>
+        <td>Shah</td>
+        <td>Candyshah@example.com</td>
       </tr>
       <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
+        <td>Haider</td>
+        <td>Tahir</td>
+        <td>haidertahir1@gmail.com</td>
       </tr>
     </tbody>
   </table>
