--- a/Responsive design .html
+++ b/Responsive design .html
@@ -30,19 +30,19 @@
     </thead>
     <tbody>
       <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
+        <td>Samar</td>
+        <td>Siddique</td>
+        <td>Samar.sadeeq7550@gmail.com</td>
       </tr>
       <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
+        <td>Ali</td>
+        <td>Hanan</td>
+        <td>ali@example.com</td>
       </tr>
       <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
+        <td>Noman</td>
+        <td>Zafar</td>
+        <td>noman@example.com</td>
       </tr>
     </tbody>
   </table>
