--- a/Responsive design .html
+++ b/Responsive design .html
@@ -30,19 +30,19 @@
     </thead>
     <tbody>
       <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
+        <td>Khurram</td>
+        <td>Rana</td>
+        <td>rgee788@gmail.com</td>
       </tr>
       <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
+        <td>Khurram </td>
+        <td>Rana</td>
+        <td>khurram@example.com</td>
       </tr>
       <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
+        <td>Khurram</td>
+        <td>Rana</td>
+        <td>khurram@example.com</td>
       </tr>
     </tbody>
   </table>
