--- a/Responsive design .html
+++ b/Responsive design .html
@@ -30,9 +30,9 @@
     </thead>
     <tbody>
       <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
+        <td>Ahmad</td>
+        <td>Hassan</td>
+        <td>ah91055@gmai.com</td>
       </tr>
       <tr>
         <td>Mary</td>
