--- a/Responsive design .html
+++ b/Responsive design .html
@@ -30,9 +30,9 @@
     </thead>
     <tbody>
       <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
+        <td>Muhammad</td>
+        <td>Azam</td>
+        <td>mazamkhan1030@gmail.com</td>
       </tr>
       <tr>
         <td>Mary</td>
