Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -54,6 +54,11 @@
         <td>Khan</td>
         <td>nk27890@gmail</td>
       </tr>
+      <tr>
+        <td>Aleem</td>
+        <td>Mughal</td>
+        <td>aleemmughal00@gmail.com</td>
+      </tr>
     </tbody>
   </table>
 
