--- a/Responsive design .html
+++ b/Responsive design .html
@@ -23,27 +23,18 @@
   <table class="table table-striped mt-5">
     <thead>
       <tr>
-        <th>Firstname</th>
-        <th>Lastname</th>
-        <th>Email</th>
+        <th>Pahla Nam</th>
+        <th>Akhiri Nam</th>
+        <th>Meri Email Id</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
+        <td>Ali</td>
+        <td>Muhtashim</td>
+        <td>ali184419@gmail.com</td>
       </tr>
       <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
-      </tr>
-      <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
-      </tr>
     </tbody>
   </table>
 
