--- a/Responsive design .html
+++ b/Responsive design .html
@@ -44,6 +44,13 @@
         <td>Dooley</td>
         <td>july@example.com</td>
       </tr>
+
+      <tr>
+        <td>Zain</td>
+        <td>Nazaqat</td>
+        <td>zainnazaqat111@gmail.com</td>
+      </tr>
+
     </tbody>
   </table>
 
