Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -63,7 +63,7 @@
         <td>aleemmughal00@gmail.com</td>
       </tr>
       <tr>
-        <td>Lanan </td>
+        <td>Hanan </td>
         <td>Gul</td>
         <td>gullhanan1@gmail.com</td>
       </tr>
