Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -30,19 +30,19 @@
     </thead>
     <tbody>
       <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
+        <td>Ahmed</td>
+        <td>Ikram</td>
+        <td>ahmedikr7@gmail.com</td>
       </tr>
       <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
+        <td>Ahmed</td>
+        <td>Ikram</td>
+        <td>22-10019@formanite.fccollege.edu.pk</td>
       </tr>
       <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
+        <td>Ahmed</td>
+        <td>Ikram</td>
+        <td>iamahmedikram@gmail.com</td>
       </tr>
     </tbody>
   </table>
