Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -115,6 +115,11 @@
         <td>Imran</td>
         <td>xamanimran@gmail.com</td>
       </tr>
+      <tr>
+        <td>Waheed</td>
+        <td>Raza</td>
+        <td>waheedraza675@gmail.com</td>
+      </tr>
 
     </tbody>
     <h1>
