Update Responsive design .html
hi this is faizan

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -19,7 +19,7 @@
   <p class="text-white-50 bg-warning">White text with 50% opacity on black background</p>
 </div>
 
-
+<h1>Hello Everyone</h1>
   <table class="table table-striped mt-5">
     <thead>
       <tr>
