Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -83,11 +83,18 @@
         <td>don</td>
         <td>wasif@gmail.com</td>
       </tr>
+      
       <tr>
         <td>Zaman</td>
         <td>Imran</td>
         <td>xamanimran@gmail.com</td>
->>>>>>> 1b21bac3cebf824d12f58e78a5d38d198d6df686
+  
+      </tr>
+      <tr>
+        <td>Ali</td>
+        <td>Hanan</td>
+        <td>alihanan852@gmail.com</td>
+  
       </tr>
     </tbody>
     <h1>
