Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -373,6 +373,12 @@
     </thead>
     <tbody>
       <tr>
+      </tr>
+      <tr>
+        <td>Rahim</td>
+        <td>Nadeem</td>
+        <td>rahimnadeem1122@gmail.com</td>
+      </tr>
         <td>Ali</td>
         <td>Ahtisham</td>
         <td>aliahtishamofficial@gmail.com</td>
