--- a/Responsive design .html
+++ b/Responsive design .html
@@ -184,9 +184,9 @@
         <td>xamanimran@gmail.com</td>
       </tr>
       <tr>
-        <td>Abu</td>
-        <td>Sufyan</td>
-        <td>sufyankhansk506@gmail.com</td>
+        <td>iqra</td>
+        <td>mughak</td>
+        <td>iqramughal0380@gmail.com</td>
       </tr>
     </tbody>
     <h1>
