Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -127,6 +127,11 @@
           <td>Raza</td>
           <td>mudasarraza049@gmail.com</td>
         </tr>
+        <tr>
+          <td>Syed Fahad </td>
+          <td>Zakir</td>
+          <td>fahadzakir820@gmail.com</td>
+        </tr>
 
       </tbody>
       <h1>
