Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -424,6 +424,11 @@
         <td>nk27890@gmail</td>
       </tr>
       <tr>
+        <td>Rahim </td>
+        <td>Nadeem</td>
+        <td>rahimnadeem1122@gmail.com</td>
+      </tr>
+      <tr>
         <td>Hanan </td>
         <td>Gul</td>
         <td>gullhanan1@gmail.com</td>
