--- a/Responsive design .html
+++ b/Responsive design .html
@@ -27,8 +27,8 @@
     <table class="table table-striped mt-5">
       <thead>
         <tr>
-          <th>Pahla Nam</th>
-          <th>Akhiri Nam</th>
+          <th>Muhammad</th>
+          <th>Noman</th>
           <th>Meri Email Id</th>
         </tr>
       </thead>
