Muhammad Faizan Tariq

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -92,6 +92,11 @@
           <td>sherazilyas647@gmail.com</td>
         </tr>
         <tr>
+          <td>Muhammad Faizan Tariq</td>
+          <td>Tariq Mahmood</td>
+          <td>mfaizantariq@gmail</td>
+        </tr>
+        <tr>
           <td>Nadeem</td>
           <td>Khan</td>
           <td>nk27890@gmail</td>
