Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -34,17 +34,12 @@
       </thead>
       <tbody>
         <tr>
-          <<<<<<< HEAD <td>Mudassar</td>
+           <td>Mudassar</td>
             <td>Raza</td>
-            <td>mudasarraza049@gmail.com</td>
-            =======
-            <<<<<<< HEAD <<<<<<< HEAD>>>>>>> e0619a0186e94ae64437e992ad6aa7a6590d7a6f
-              <td>Ali</td>
+            <td>mudasarraza049@gmail.com</td> <td>Ali</td>
               <td>Hanan</td>
-              <td>alihanan8521@gmail.com/td>
-                =======
-                =======
-                <<<<<<< <td>Khurram
+              <td>alihanan8521@gmail.com</td>
+                <td>Khurram
               </td>
               <td>Rana</td>
               <td>rgee788@gmail.com</td>
@@ -58,8 +53,6 @@
           <td>Khurram</td>
           <td>Rana</td>
           <td>khurram@example.com</td>
-          =======
-          =======
           <td>Ali</td>
 
           <td>Muhtashim</td>
@@ -69,12 +62,9 @@
 
           <td>Ahtisham</td>
           <td>aliahtishamofficial@gmail.com</td>
-          >>>>>>> 87acf984bb9bd7349d352d5b629b16f6e599d9c9
-          >>>>>>> 1f0ee9174b1d827dc106021454babe1a2f66b164
           <td>Wasif</td>
           <td>Imtiaz</td>
           <td>wasifimtiaz58@gmail.com</td>
-          >>>>>>> 94d0e7fad4d4fa2a637e9d6e631c8c528abfb67e
         </tr>
         <tr>
           <td>Haider</td>
@@ -105,7 +95,6 @@
           <td>Lanan </td>
           <td>Gul</td>
           <td>gullhanan1@gmail.com</td>
-          >>>>>>> 5f5e9556e4193af7947d531ba43fd73f69f9849b
         </tr>
         <tr>
           <td>Abdul</td>
