Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -133,6 +133,13 @@
           <td>fahadzakir820@gmail.com</td>
         </tr>
 
+      </tr>
+      <tr>
+        <td>Zain  </td>
+        <td>Nazaqat</td>
+        <td>zainnazaqat111@gmail.com</td>
+      </tr>
+
       </tbody>
       <h1>
         Sumran Ali
