Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <h1>Sumran Ali Baazzzzzzz Aoooo</h1>
 
     <div class="container">
       <h2>Opacity Text Colors</h2>
@@ -474,6 +475,8 @@
     <h1>
       Sumran Ali
     </h1>
+
+    
   </table>
   <p>Muhammad Abdullah<b>m.abdullah158@outlook.com</b></p>
 </body>
