Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -82,6 +82,9 @@
             <td>Wasif</td>
             <td>Imtiaz</td>
             <td>wasifimtiaz58@gmail.com</td>
+            <td>Zain ul Abideen</td>
+            <td></td>
+            <td>zain.1@ucp.edu.pk</td>
 
             >>>>>>> 41f023defaf07b1eb9205638e0dd07f7dad201d9
         </tr>
