--- a/Responsive design .html
+++ b/Responsive design .html
@@ -44,6 +44,11 @@
         <td>Dooley</td>
         <td>july@example.com</td>
       </tr>
+      <tr>
+        <td>Khurram</td>
+        <td>Rana</td>
+        <td>123@eample.com</td>
+      </tr>
     </tbody>
   </table>
 
