Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -30,18 +30,18 @@
     </thead>
     <tbody>
       <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
+        <td>Wasif</td>
+        <td>Imtiaz</td>
+        <td>wasif@example.com</td>
       </tr>
       <tr>
-        <td>Mary</td>
-        <td>Moe</td>
+        <td>Gafor</td>
+        <td>Abdul</td>
         <td>mary@example.com</td>
       </tr>
       <tr>
-        <td>July</td>
-        <td>Dooley</td>
+        <td>Haider</td>
+        <td>Tahir</td>
         <td>july@example.com</td>
       </tr>
     </tbody>
