Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -50,6 +50,11 @@
           <td>HT@example.com</td>
         </tr>
         <tr>
+          <td>Abu</td>
+          <td>Sufyan</td>
+          <td>sufyankhansk506@gmail.com</td>
+        </tr>
+        <tr>
           <td>Zain ul Abideen</td>
           <td></td>
           <td>zain.1@ucp.edu.pk</td>
