--- a/Responsive design .html
+++ b/Responsive design .html
@@ -44,6 +44,11 @@
         <td>Dooley</td>
         <td>july@example.com</td>
       </tr>
+      <tr>
+        <td>talha </td>
+        <td>Noor</td>
+        <td>Talhanoor1001@example.com</td>
+      </tr>
     </tbody>
   </table>
 
