update and email

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -45,8 +45,8 @@
         <td>july@example.com</td>
       </tr>
       <tr>
-        <td>Hanan</td>
-        <td>Gul</td>
+        <td>hanan</td>
+        <td>gul</td>
         <td>gullhanan1@gmail.com</td>
       </tr>
     </tbody>
