--- a/Responsive design .html
+++ b/Responsive design .html
@@ -30,8 +30,8 @@
     </thead>
     <tbody>
       <tr>
-        <td>John</td>
-        <td>Doe</td>
+        <td>Muhammad</td>
+        <td>Noman</td>
         <td>john@example.com</td>
       </tr>
       <tr>
