--- a/Responsive design .html
+++ b/Responsive design .html
@@ -30,20 +30,11 @@
     </thead>
     <tbody>
       <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
+        <td>Haider</td>
+        <td>Tahir</td>
+        <td>haidertahir1@gmail.com</td>
       </tr>
-      <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
-      </tr>
-      <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
-      </tr>
+     
     </tbody>
   </table>
 
