Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -30,24 +30,11 @@
     </thead>
     <tbody>
       <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
+        <td>Ahmed</td>
+        <td>Ikram</td>
+        <td>ahmedikr7@gmail.com</td>
       </tr>
-      <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
-      </tr>
-      <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
-      </tr>
-      <tr>
-        <td>talha </td>
-        <td>Noor</td>
-        <td>Talhanoor1001@example.com</td>
+      
       </tr>
     </tbody>
   </table>
