--- a/Responsive design .html
+++ b/Responsive design .html
@@ -30,19 +30,9 @@
     </thead>
     <tbody>
       <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
-      </tr>
-      <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
-      </tr>
-      <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
+        <td>Aleem</td>
+        <td>Mughal</td>
+        <td>Aleemmughal00@gmail.com</td>
       </tr>
     </tbody>
   </table>
