Update Responsive design .html
Tahir_Qadri

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -30,9 +30,9 @@
     </thead>
     <tbody>
       <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
+        <td>Tahir</td>
+        <td>Qadri</td>
+        <td>TahirQadri@gamil.com</td>
       </tr>
       <tr>
         <td>Mary</td>
