Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -30,9 +30,14 @@
     </thead>
     <tbody>
       <tr>
+        <td>John</td>
+        <td>Doe</td>
+        <td>john@example.com</td>
+      </tr>
+      <tr>
         <td>Muhammad</td>
         <td>Noman</td>
-        <td>john@example.com</td>
+        <td>znoman09@gmail.com</td>
       </tr>
       <tr>
         <td>Mary</td>
