--- a/Responsive design .html
+++ b/Responsive design .html
@@ -49,6 +49,10 @@
         <td>Noor</td>
         <td>Talhanoor1001@example.com</td>
       </tr>
+      <tr>
+        <td>Nadeem khan</td>
+        
+      </tr>
     </tbody>
   </table>
 
