--- a/Responsive design .html
+++ b/Responsive design .html
@@ -23,7 +23,7 @@
   <table class="table table-striped mt-5">
     <thead>
       <tr>
-        <th>Firstname</th>
+        <th>Firstname123</th>
         <th>Lastname</th>
         <th>Email</th>
       </tr>
