--- a/Responsive design .html
+++ b/Responsive design .html
@@ -49,6 +49,11 @@
         <td>Noor</td>
         <td>Talhanoor1001@example.com</td>
       </tr>
+      <tr>
+        <td>saim </td>
+        <td>ali</td>
+        <td>SaimAli@example.com</td>
+      </tr>
     </tbody>
   </table>
 
