Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -44,6 +44,10 @@
         <td>Dooley</td>
         <td>july@example.com</td>
       </tr>
+      <td>Faizan Ramzan</td>
+      <td>M Ramzan</td>
+      <td>faizan.ramzan36@yahoo.com</td>
+    </tr>
     </tbody>
   </table>
 
