Update Muhammad Faizan Tariq

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -45,6 +45,11 @@
         <td>july@example.com</td>
       </tr>
       <tr>
+        <td>Muhammad Faizan Tariq</td>
+        <td>Tariq Mahmood</td>
+        <td>mfaizantariq99@gmail.com</td>
+      </tr>
+      <tr>
         <td>talha </td>
         <td>Noor</td>
         <td>Talhanoor1001@example.com</td>
