--- a/Responsive design .html
+++ b/Responsive design .html
@@ -30,11 +30,25 @@
     </thead>
     <tbody>
       <tr>
+        <td>John</td>
+        <td>Doe</td>
+        <td>john@example.com</td>
+      </tr>
+      <tr>
+        <td>Mary</td>
+        <td>Moe</td>
+        <td>mary@example.com</td>
+      </tr>
+      <tr>
+        <td>July</td>
+        <td>Dooley</td>
+        <td>july@example.com</td>
+      </tr>
+      <tr>
         <td>Ali</td>
         <td>Ahtisham</td>
-        <td>aliahtisham@gmail.com</td>
+        <td>ahtisham@gmail.com</td>
       </tr>
-      
     </tbody>
   </table>
 
