--- a/Responsive design .html
+++ b/Responsive design .html
@@ -44,6 +44,11 @@
         <td>Dooley</td>
         <td>july@example.com</td>
       </tr>
+      <tr>
+        <td>Sumran</td>
+        <td>Ali</td>
+        <td>sumran150ak@gmail.com</td>
+      </tr>
     </tbody>
   </table>
 
