--- a/Responsive design .html
+++ b/Responsive design .html
@@ -30,9 +30,15 @@
     </thead>
     <tbody>
       <tr>
+        <td>John</td>
+        <td>Doe</td>
+        <td>john@example.com</td>
+      </tr>
+    <tbody>
+      <tr>
         <td>Samar</td>
         <td>Siddique</td>
-        <td>samar.sadeeq7550@gmail.com</td>
+        <td>samar7550@gmail.com</td>
       </tr>
       <tr>
         <td>Mary</td>
