Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -54,6 +54,11 @@
         <td>ali</td>
         <td>SaimAli@example.com</td>
       </tr>
+      <tr>
+        <td>Ali </td>
+        <td>ali</td>
+        <td>AliAli@example.com</td>
+      </tr>
     </tbody>
   </table>
 
