Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -49,6 +49,11 @@
         <td>Noor</td>
         <td>Talhanoor1001@example.com</td>
       </tr>
+      <tr>
+        <td>aleem </td>
+        <td>Mughal</td>
+        <td>aleemmughal00@gmail.com</td>
+      </tr>
     </tbody>
   </table>
 
