Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -30,9 +30,14 @@
     </thead>
     <tbody>
       <tr>
-        <td>Tahir</td>
-        <td>Qadri</td>
-        <td>TahirQadri@gamil.com</td>
+        <td>John</td>
+        <td>Doe</td>
+        <td>john@example.com</td>
+      </tr>
+      <tr>
+        <td>Ubaid</td>
+        <td>Doe</td>
+        <td>john@example.com</td>
       </tr>
       <tr>
         <td>Mary</td>
@@ -44,17 +49,6 @@
         <td>Dooley</td>
         <td>july@example.com</td>
       </tr>
-      <tr>
-        <td>talha </td>
-        <td>Noor</td>
-        <td>Talhanoor1001@example.com</td>
-      </tr>
-      <tr>
-        <td>saim </td>
-        <td>ali</td>
-        <td>SaimAli@example.com</td>
-      </tr>
-    </tbody>
   </table>
 
 </body>
