--- a/Responsive design .html
+++ b/Responsive design .html
@@ -68,6 +68,12 @@
         <td>AliAli@example.com</td>
 
       </tr>
+      <tr>
+        <td>Muhammad </td>
+        <td>Aakash</td>
+        <td>Mmalikaakash1992@gmail</td>
+
+      </tr>
     </tbody>
   </table>
 
