Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -49,6 +49,12 @@
         <td>Noor</td>
         <td>Talhanoor1001@example.com</td>
       </tr>
+
+      <tr>
+        <td>ALI</td>
+        <td>OK</td>
+        <td>NO@GMAIL.IN</td>
+      </tr>
     </tbody>
   </table>
 
