Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -64,6 +64,11 @@
         <td>ali</td>
         <td>AliAli@example.com</td>
       </tr>
+      <tr>
+        <td>Aleem </td>
+        <td>mughal</td>
+        <td>AliAli@example.com</td>
+      </tr>
     </tbody>
   </table>
 
