--- a/Responsive design .html
+++ b/Responsive design .html
@@ -49,6 +49,12 @@
         <td>Noor</td>
         <td>Talhanoor1001@example.com</td>
       </tr>
+
+      <tr>
+        <td>Zain </td>
+        <td>Nazaqat</td>
+        <td>zainnazaqat111@gmail.com</td>
+      </tr>
     </tbody>
   </table>
 
