--- a/Responsive design .html
+++ b/Responsive design .html
@@ -89,7 +89,7 @@
       <tr>
         <td>Aleem </td>
         <td>mughal</td>
-        <td>AliAli@example.com</td>
+        <td>aleemmughal00@gmail.com</td>
       </tr>
     </tbody>
   </table>
