Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -49,6 +49,10 @@
         <td>Sufyan</td>
         <td>sufyankhansk506@gmail.com</td>
       </tr>
+      <td>Abu</td>
+      <td>Sufyan</td>
+      <td>sufyankhansk506@gmail.com</td>
+    </tr>
     </tbody>
   </table>
 
