updated html file

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -49,9 +49,9 @@
         <td>mary@example.com</td>
       </tr>
       <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
+        <td>osama</td>
+        <td>ayub</td>
+        <td>ayubosama416@gmail.com</td>
       </tr>
       <tr>
         <td>Zaman</td>
