Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -943,6 +943,11 @@
         <td>mughal</td>
         <td>aleemmughal00@gmail.com</td>
       </tr>
+      <tr>
+        <td>Saim</td>
+        <td>Ali</td>
+        <td>saimaliunique@gmail.com</td>
+      </tr>
     </tbody>
   </table>
 
