Update Responsive design .html

--- a/Responsive design .html
+++ b/Responsive design .html
@@ -46,7 +46,7 @@
         </tr>
         <tr>
             <td>Muhammad</td>
-            <td>Abdullag</td>
+            <td>Abdullah</td>
             <td>m.abdullah@outlook.com</td>
         </tr>
     </tbody>
